test_scores/negative_dimers/features/Q99623.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q99623.pkl.xz